# careamics.github.io

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  versions.json  zensical.toml  zensical_missing_features.txt
"latest"/: 404.html  index.html  objects.inv  sitemap.xml
"latest"/algorithms/: index.html
"latest"/applications/: index.html
"latest"/current_state/: index.html
"latest"/guides/: index.html
"latest"/installation/: index.html
"latest"/reference/: index.html
"latest"/search/: search_index.json
$latest_version/: 404.html  index.html  sitemap.xml
$latest_version/algorithms/: index.html
$latest_version/applications/: index.html
$latest_version/current_state/: index.html
$latest_version/guides/: index.html
$latest_version/installation/: index.html
$latest_version/reference/: index.html
$latest_version/search/: search_index.json
.github/workflows/: build_pr.yml  deploy-pages.yml  docs.yml
0.1/: 404.html  index.html  objects.inv  search.json  sitemap.xml
0.1/algorithms/: index.html
0.1/applications/: index.html
0.1/current_state/: index.html
0.2/: 404.html  index.html  objects.inv  search.json  sitemap.xml
0.3/: 404.html  index.html  objects.inv  search.json  sitemap.xml
docs/: current_state.md  features.md  index.md  installation.md  ref_zensical.md
scripts/: add_notebook_header.py  check_nav_empty.py  check_out_examples.sh  gen_jupyter_nav.py  gen_ref_pages.py  git_repositories.txt  nav_utils.py  notebooks.csv  notebooks.json  pull_from_repos.sh  update_nav.py
(+1484 files in other folders)
